change newline protocol for improved emoji use

--- a/tests/index.html
+++ b/tests/index.html
@@ -147,7 +147,7 @@
         // WebSocket connection
         let ws = null;
         let currentEndpoint = '/help'; // Default endpoint
-        const serverUrl = 'https://hxhhgjzgmk.us-east-1.awsapprunner.com'; // Update with your server URL
+        const serverUrl = 'ws://localhost:3000'; // Update with your server URL
 
         // DOM elements
         const statusEl = document.getElementById('connection-status');
